2004-01-02  NeilFred Picciotto  <fred@full.halflab.com>

	* tnt.el (tnt-get-buddy-at-point): avoid using point-at-eol, since
	it's apparently not available on FSF emacs...

2003-12-30  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-strip-offline-nicks): also don't strip if "just-onoff".

2003-11-11  Scott Evans  <scott@templarcorp.com>

	* tnt.el (tnt-nick-less-than): Make buddylist grouping case-insensitive.
	(tnt-downcase): Add.

2003-11-04  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-default-away-message): Change default to nil
	to preserve old behavior.
	(tnt-append-message): Set buffer-undo-list to nil at end.

2003-11-02  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-get-buddy-at-point): Use point-at-eol instead of
	line-end-position.
	(tnt-strip-offline-nicks): Don't strip buddies with pending
	messages or pounces.

2003-10-29  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-show-buddies): call (font-lock-mode 1).  not sure if
	this is the right place for this.
	(tnt-html-regexps-to-replace): removed scott's added "</?[bui]>"
	regexp; removed his spurious "tnt-html-regexps-to-replace" line;
	added replacements for I and B tags to _ and *, respectively.
	(tnt-html-tags-to-strip): added "</?[Uu]>".

2003-10-28  Scott Evans  <scott@templarcorp.com>

	* tnt.el (tnt-buddy-list-message-waiting-face): Add.
	(tnt-buddy-list-font-lock-keywords): Add MESSAGE WAITING keyword.
	(tnt-html-regexps-to-replace): Add regexps for bold/italic/underline.

2003-10-25  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-cycle-buddies-sort): Add.
	(tnt-buddy-list-mode-map): Add "S" = tnt-cycle-buddies-sort.
	Add "ga", "gi", "go" for grouping.
	(tnt-buddy-list-menu): Add 4th menu with sort order, grouping commands.
	(tnt-next-menu): There are 4 menus now.

2003-10-25  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-kill): Store the tnt-current-user, *then* check it
	for null after attempting to sign off.
